bug fix for overlapping search form and favorites list

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,11 @@
+/* Global Stylings */
 
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
+
+/* Favorites List Stylings */
 .favorites {
   background-color: #f5f5f5;
   padding: 40px;
@@ -10,9 +17,11 @@
   padding: 0 15px;
 }
 
-.favorites-list {}
+.favorites-list {
+}
 
-.container {}
+.container {
+}
 
 .favorite-movies-title {
   font-size: 36px;
@@ -21,7 +30,8 @@
   color: #333;
 }
 
-.favorite-movie-list {}
+.favorite-movie-list {
+}
 
 .favorite-movie-item {
   display: flex;
@@ -72,31 +82,36 @@
   border-radius: 5px;
   font-size: 16px;
   cursor: pointer;
-  transition: background-color .3s ease;
+  transition: background-color 0.3s ease;
 }
 
 .remove-btn:hover {
   background-color: #d63030;
 }
 
+/* Navigation Bar Stylings */
+
 .navbar-custom {
   width: 100%;
 }
 
-.Media-Search {
-    position: absolute;
-    top: 20%;
-    left: 40%;
-}   
+/* Media Search Stylings */
 
-label[for="select-media"] {
-    position: absolute;
-    top: 120%;
-    right: 67%; 
+.media-search-container {
+  width: 100%;
+  height: 100vh;
+  background-color: #f5f5f5;
+  padding-top: 5em;
+  font-size: 3em;
 }
 
-#media-type {
-    position: absolute;
-    top: 123%;
-    right: 40%; 
+.media-form {
+  background-color: white;
+  text-align: center;
+  padding: 30px;
+  width: 60%;
+  margin-left: 20%;
+  margin-right: 20%;
+  border-radius: 12px;
+  box-shadow: 0.25px 0.25px 5px black;
 }
